# hello_rust

./: .gitignore  Cargo.toml  README.txt  Result.ipynb  Untitled.ipynb  hello.txt
input/: challenge.csv
output/: challenge.csv
src/: ar1.rs  auto1.rs  clo1.rs  conditions.rs  cr1.rs  doc1.rs  enum1.rs  err1.rs  err2.rs  err3.rs  fn1.rs  gen1.rs  gen2.rs  io1.rs  io2.rs  lib.rs  lif1.rs  lif2.rs  lif3.rs  lif4.rs  main.rs  map1.rs  mo1.rs  oo1.rs  oo2.rs  oo3.rs  oo4.rs  option1.rs  own1.rs  own2.rs  own3.rs  own4.rs  print.rs  str1.rs  str2.rs  th1.rs  th2.rs  th3.rs  th5.rs  trait1.rs  (+4 more)
src/apps/: adt1.rs  arg1.rs  cr1.rs  fail1.rs  mod.rs  pow1.rs  pow2.rs
src/concurrencies/: arc1.rs  arc2.rs  async1.rs  async2.rs  async3.rs  atom1.rs  ba1.rs  ba2.rs  ch1.rs  ch2.rs  ch3.rs  lock1.rs  mod.rs  mu1.rs  th1.rs  th2.rs  th3.rs  th4.rs  th5.rs
src/cores/: file1.rs  file2.rs  mod.rs
src/errors/: err1.rs  err2.rs  err3.rs  err4.rs  mod.rs
src/flows/: cmp1.rs  cmp2.rs  loop1.rs  macro1.rs  macro2.rs  macro3.rs  match1.rs  mod.rs  pat1.rs  pat2.rs
src/functions/: clo1.rs  clo2.rs  clo3.rs  clo4.rs  clo5.rs  clo6.rs  clo7.rs  clo8.rs  fn1.rs  fn2.rs  mod.rs
src/mods/: mo1.rs  mod.rs
src/objects/: ar1.rs  mod.rs
src/patterns/: builder1.rs  builder2.rs  mod.rs
src/types/: ar1.rs  enum1.rs  gen1.rs  gen2.rs  int1.rs  it1.rs  it2.rs  it3.rs  it4.rs  map1.rs  mod.rs  option1.rs  pointer1.rs  pointer2.rs  pointer3.rs  rc1.rs  rc2.rs  rc3.rs  rc4.rs  rc5.rs  rc6.rs  re1.rs  req1.rs  result1.rs  sh.rs  sl1.rs  str1.rs  str2.rs  str3.rs  str4.rs  trait1.rs  trait2.rs  (+6 more)
(+10 files in other folders)
