[package]
name = "hello_world"
version = "0.1.0"
authors = ["Faust Fu <faust.fu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
autopilot = "0.2.2"
regex = "1.3.9"
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["full"] }
hello_proc_macro = { path = "../hello_proc_macro" }
failure = "0.1.8"
failure_derive = "0.1.8"