[package]
name = "hello_world"
version = "0.1.0"
authors = ["Faust Fu <faust.fu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.2.2"
failure = "0.1.8"
failure_derive = "0.1.8"
hello_proc_macro = { path = "../hello_proc_macro" }
itertools = "0.9.0"
num_cpus = "1.13.0"
rand = "0.7"
rayon = "1.3.1"
regex = "1.3.9"
reqwest = "0.10.6"
rust-crypto = "0.2.36"
serde = "1.0.114"
serde_json = "1.0.56"
structopt = "0.3.15"
structopt-derive = "0.4.8"
threadpool = "1.8.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
